@@ -16,6 +16,9 @@ Beta    42 release 26 Nov 07
 - on disconnect the statusbar now immediately shows nick as <Unknown>
 - bound Meta+H and Meta+O to open the help and option dialogs
 - reconnect now uses the last nickname you held; not your default nick
+- fixed a bug with jIRCii's processing of config numerical data--this was
+  causing DCC receives to not work and other weird issues for users who
+  failed to visit the appropriate options dialog.
 
 Beta    41 last minute update 25 Mar 07 :)
 ====
